[package]

name = "usb"
version = "0.2.0"
authors = [ "Kevin Mehall <km@kevinmehall.net>", "Ian Daniher <it.daniher@gmail.com>" ]
description = "Library for low-level access to USB devices via libusb"
license = "MIT"
keywords = ["USB", "hardware", "bindings"]
repository = "https://github.com/kevinmehall/rust-usb"

[lib]
name = "usb"

[[example]]
name = "test"
path = "examples/test/main.rs"
