[package]

name = "usb"
version = "0.2.3"
authors = [ "Kevin Mehall <km@kevinmehall.net>", "Ian Daniher <it.daniher@gmail.com>" ]
description = "DEPRECATED: use `libusb` crate"
keywords = ["deprecated"]
license = "MIT"
repository = "https://github.com/kevinmehall/rust-usb"

[lib]
name = "usb"
doctest = false

[[example]]
name = "test"
path = "examples/test/main.rs"

[dependencies]
libc = "0.1"
